# gridstory

./: .env.example  .gitignore  ARCHITECTURE.md  MLFLOW_SETUP.md  PREPROCESSING.md  README.md  USAGE.md  app.py  config.yaml  main.py  pyproject.toml
cli/: README.md  extract.py  list_data.py  ml_analysis.py  pipeline.py  preprocess.py  ruptures_analysis.py
cli/pipeline_steps/: __init__.py  events.py  extraction.py  llm.py  ml.py  preprocessing.py  reporting.py
docs/: api.md  architecture.md  configuration.md  ml_pipeline.md
examples/: mlflow_example.py  preprocessing_example.py
src/: __init__.py
src/api/: README.md
src/extraction/: README.md  __init__.py  calendar.py  etl.py  orchestrator.py  polling.py
src/llm/: README.md  __init__.py  examples.py  narrative_context.py  reporter.py
src/ml/: README.md  __init__.py  anomaly_classification.py  anomaly_detection.py  change_point.py  clustering.py  driver_profiles_builder.py  metrics.py  pipeline.py  race_summary_builder.py  strategy.py  timeline.py  tracking.py
src/models/: README.md  __init__.py  driver_profile.py  race_events.py  race_summary.py  relatorio.py
src/observability/: __init__.py
src/preprocessing/: README.md  __init__.py  feature_engineering.py  feature_engineering_old.py  interpolation.py  signal_processing.py
src/utils/: __init__.py  config.py
tests/: __init__.py
tests/preprocessing/: test_feature_engineering.py  test_interpolation.py  test_signal_processing.py
tests/test_extraction/: __init__.py  test_basic.py
tests/test_llm/: __init__.py
tests/test_ml/: __init__.py
(+5 files in other folders)
