[project]
name = "gridstory"
version = "0.2.0"
description = "F1 race data pipeline — from raw telemetry to structured JSON events ready for LLM-powered narrative generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1>=3.8.1",
    "mlflow>=3.10.0rc0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "ruptures>=1.1.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
